layer and sub layer group headers, fixed bug where visible layer can be duplicated

--- a/web-map/src/app/layers/layer-group/layer-group.component.scss
+++ b/web-map/src/app/layers/layer-group/layer-group.component.scss
@@ -27,6 +27,10 @@ span.badge {
     color: white;  
 }
 
+.layer-group-title {
+    flex-grow: 1;
+}
+
 .visible-layers {
     padding: 0.25rem;
 }
